--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
        "request": "2.x",
        "xmlhttprequest": ">=1.5.0",
        "cssom": "~0.3.0",
-       "cssstyle": "~0.2.6"
+       "cssstyle": "0.2.36"
     },
     "devDependencies" : {
       "nodeunit": "~0.8.0",
